--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,8 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+env:
+  GRADLE_VERSION: '6'
 
 jobs:
   build:
@@ -42,9 +44,9 @@ jobs:
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@417ae3ccd767c252f5661f1ace9f835f9654f2b5 # v3.1.0
       with:
-        gradle-version: '8.5'
+        gradle-version: '${{ env.GRADLE_VERSION}}'
     
-    - name: Build with Gradle 8.5
+    - name: Build with Gradle ${{ env.GRADLE_VERSION}}
       run: gradle build --stacktrace --debug
 
   dependency-submission:
