--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,10 +26,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: Set up JDK '${{ env.JAVA_VERSION_NAME }}'
+    - name: Set up JDK ${{ env.JAVA_VERSION_NAME }}
       uses: actions/setup-java@v4
       with:
-        java-version: '${{ env.JAVA_VERSION }}'
+        java-version: ${{ env.JAVA_VERSION }}
         distribution: 'temurin'
 
     # Configure Gradle for optimal use in GiHub Actions, including caching of downloaded dependencies.
@@ -46,7 +46,7 @@ jobs:
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@417ae3ccd767c252f5661f1ace9f835f9654f2b5 # v3.1.0
       with:
-        gradle-version: '${{ env.GRADLE_VERSION}}'
+        gradle-version: ${{ env.GRADLE_VERSION}}
     
     - name: Build with Gradle ${{ env.GRADLE_VERSION}}
       run: gradle build --stacktrace --debug
@@ -62,7 +62,7 @@ jobs:
     - name: Set up JDK ${{ env.JAVA_VERSION_NAME }}
       uses: actions/setup-java@v4
       with:
-        java-version: '${{ env.JAVA_VERSION }}'
+        java-version: ${{ env.JAVA_VERSION }}
         distribution: 'temurin'
 
     # Generates and submits a dependency graph, enabling Dependabot Alerts for all project dependencies.
