--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,9 +13,9 @@ on:
   pull_request:
     branches: [ "main" ]
 env:
-  GRADLE_VERSION: '6.0'
-  JAVA_VERSION: '8'
-  JAVA_VERSION_NAME: '1.8'
+  GRADLE_VERSION: 6.0
+  JAVA_VERSION: 8
+  JAVA_VERSION_NAME: 1.8
 
 jobs:
   build:
