--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,9 +13,9 @@ on:
   pull_request:
     branches: [ "main" ]
 env:
-  GRADLE_VERSION: 6.0
-  JAVA_VERSION: 8
-  JAVA_VERSION_NAME: 1.8
+  GRADLE_VERSION: '6.0'
+  JAVA_VERSION: '8'
+  JAVA_VERSION_NAME: '1.8'
 
 jobs:
   build:
@@ -48,8 +48,11 @@ jobs:
       with:
         gradle-version: ${{ env.GRADLE_VERSION}}
     
+    - name: Make sure gradlew is executable
+      run: chmod +x ./gradlew
+
     - name: Build with Gradle ${{ env.GRADLE_VERSION}}
-      run: gradle build
+      run: ./gradlew build
 
   dependency-submission:
 
