--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
     runs-on: ubuntu-${{matrix.version}}
     strategy:
       matrix:
-        version: [22.04, 20.04]
+        version: [latest]
     permissions:
       contents: read
 
@@ -57,8 +57,15 @@ jobs:
     - name: Build with Gradle ${{ env.GRADLE_VERSION}}
       run: ./gradlew build
 
+    - name: Build and Push Docker Image
+      uses: mr-smithers-excellent/docker-build-push@v6
+      with:
+        image: greggorgmailcom/github-actions-tutorial
+        registry: docker.io
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+    
   dependency-submission:
-
     runs-on: ubuntu-latest
     permissions:
       contents: write
