--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,11 +58,12 @@ jobs:
       run: ./gradlew build
 
     - name: Inspect build artifacts
-      run: ls -laR .
+      run: ls -laR . -I README.md -I src -I Dockerfile -I ".git*" -I "*gradle*"
 
     - name: Build and Push Docker Image
       uses: mr-smithers-excellent/docker-build-push@v6
       with:
+        context: .
         image: greggorgmailcom/github-actions-tutorial
         registry: docker.io
         username: ${{ secrets.DOCKER_USERNAME }}
