--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,7 +63,7 @@ jobs:
     - name: Build and Push Docker Image
       uses: mr-smithers-excellent/docker-build-push@v6
       with:
-        context: .
+        directory: .
         image: greggorgmailcom/github-actions-tutorial
         registry: docker.io
         username: ${{ secrets.DOCKER_USERNAME }}
