--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,10 +20,8 @@ env:
 jobs:
   build:
 
-    runs-on: ubuntu-${{matrix.version}}
-    strategy:
-      matrix:
-        version: [latest]
+    runs-on: ubuntu-latest
+
     permissions:
       contents: read
 
